--- a/docker/frontend-nginx/conf.d/default.conf
+++ b/docker/frontend-nginx/conf.d/default.conf
@@ -1,14 +1,14 @@
 upstream app {
-  server backend-cache:80;
+  server backend-cache:{{ .Env.BACKEND_CACHE_PORT }};
 }
 
 server {
-  listen 8080 default_server;
+  listen {{ .Env.FRONTEND_NGINX_PORT }} default_server;
   server_name localhost _;
-  index index.html;
+  index index.php;
 
   location / {
-      root   /dist;
+      root /dist;
 
       location ~*  \.(jpg|jpeg|png|gif|ico|css|js|pdf|svg|html)$ {
           limit_except GET {
