--- a/docker/php-fpm/php-fpm.d/www.conf
+++ b/docker/php-fpm/php-fpm.d/www.conf
@@ -34,7 +34,7 @@ group = www-data
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
 ;listen = 9000
-listen = /socket/app.sock
+listen = {{ .Env.PHP_SOCKET_DIR }}/{{ .Env.PHP_SOCKET_FILE }}
 
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on FreeBSD and OpenBSD)
@@ -46,7 +46,7 @@ listen = /socket/app.sock
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
 listen.owner = www-data
-listen.group = app
+listen.group = {{ .Env.APP_GROUP_NAME }}
 listen.mode = 0660
 
 ; When POSIX Access Control Lists are supported you can set them using
