--- a/docker/backend-cache/Dockerfile
+++ b/docker/backend-cache/Dockerfile
@@ -1,7 +1,18 @@
-ARG VARNISH_TAG="6.2"
+ARG VARNISH_TAG="6.3"
 
-FROM varnish:${VARNISH_TAG}
+FROM varnish:${VARNISH_TAG} as varnish-build
 
-COPY ./default.vcl /etc/varnish/
+ARG BACKEND_NGINX_PORT=8081
 
-RUN mkdir -p /var/lib/varnish
+COPY --from=hairyhenderson/gomplate:v2.5.0-slim /gomplate /bin/gomplate
+
+WORKDIR /build
+COPY ./default.vcl ./
+
+RUN /bin/gomplate -o /etc/varnish/default.vcl -f default.vcl
+
+FROM varnish:${VARNISH_TAG} as varnish
+
+WORKDIR /etc/varnish
+
+COPY --from=varnish-build /etc/varnish .
