--- a/docker/backend-nginx/conf.d/default.conf
+++ b/docker/backend-nginx/conf.d/default.conf
@@ -18,7 +18,7 @@ server {
    error_page 404 = @php;
 
   location @php {
-    root /site/app;
+    root {{ .Env.APP_CODE_DIR }};
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     # include the fastcgi_param settings
     include fastcgi.params;
