--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
       context: ./
       dockerfile: docker/frontend-nginx/Dockerfile
       args:
-        FRONTEND_NGINX_PORT: ${FRONTEND_NGINX_PORT:-8080}
-        BACKEND_CACHE_PORT: ${BACKEND_CACHE_PORT:-80}
+        FRONTEND_NGINX_PORT: ${FRONTEND_NGINX_PORT}
+        BACKEND_CACHE_PORT: ${BACKEND_CACHE_PORT}
     ports:
-      - 80:${FRONTEND_NGINX_PORT:-8080}
+      - 80:${FRONTEND_NGINX_PORT}
     volumes:
       - ./dist:/dist:ro
       - type: tmpfs
@@ -30,7 +30,7 @@ services:
       - type: tmpfs
         target: /usr/local/var/varnish:exec
     expose:
-      - ${BACKEND_CACHE_PORT:-80}
+      - ${BACKEND_CACHE_PORT}
     networks:
       - frontend_web
       - backend_app
@@ -41,16 +41,17 @@ services:
       context: ./
       dockerfile: docker/backend-nginx/Dockerfile
       args:
-        APP_GROUP_NAME: ${APP_GROUP_NAME:-app}
-        APP_GROUP_ID: ${APP_GROUP_ID:-2001}
-        PHP_SOCKET_DIR: ${PHP_SOCKET_DIR:-/socket}
-        PHP_SOCKET_FILE: ${PHP_SOCKET_FILE:-app.sock}
+        APP_GROUP_NAME: ${APP_GROUP_NAME}
+        APP_GROUP_ID: ${APP_GROUP_ID}
+        APP_CODE_DIR: ${APP_CODE_DIR}
+        PHP_SOCKET_DIR: ${PHP_SOCKET_DIR}
+        PHP_SOCKET_FILE: ${PHP_SOCKET_FILE}
     volumes:
-      - socket:${PHP_SOCKET_DIR:-/socket}
+      - socket:${PHP_SOCKET_DIR}
     networks:
       - backend_app
     expose:
-      - ${BACKEND_NGINX_PORT:-8081}
+      - ${BACKEND_NGINX_PORT}
     depends_on:
       - php-fpm
   php-fpm:
@@ -58,13 +59,13 @@ services:
       context: ./
       dockerfile: docker/php-fpm/Dockerfile
       args:
-        APP_GROUP_NAME: ${APP_GROUP_NAME:-app}
-        APP_GROUP_ID: ${APP_GROUP_ID:-2001}
-        PHP_SOCKET_DIR: ${PHP_SOCKET_DIR:-/socket}
-        PHP_SOCKET_FILE: ${PHP_SOCKET_FILE:-app.sock}
+        APP_GROUP_NAME: ${APP_GROUP_NAME}
+        APP_GROUP_ID: ${APP_GROUP_ID}
+        PHP_SOCKET_DIR: ${PHP_SOCKET_DIR}
+        PHP_SOCKET_FILE: ${PHP_SOCKET_FILE}
     volumes:
-      - ./app:/site/app:ro
-      - socket:${PHP_SOCKET_DIR:-/socket}
+      - ./app:${APP_CODE_DIR}:ro
+      - socket:${PHP_SOCKET_DIR}
 volumes:
   socket:
 networks:
